  (kiesel, Tom Geiger)
- Fixed text.util.RandomCodeGenerator not being able to generate codes
  longer than 44 characters
  (friebe)
- Added fix to catch submission of malicious request data in 
  scriptlet.xml.XMLScriptletResponse.
  (kiesel)
- Fixed typo in security.crypto.PrivateKey class
  (Thomas Geiger, Tobias Roth, kiesel)

Features
~~~~~~~~
- Added a new soap type caster webservices.soap.types.SOAPDecimal
  (wagner)
- Added a new Caster that removes illegal control characters from input 
  strings scriptlet.workflow.casters.ToValidXMLString
  (toennishoff)
- made lang.XPClass support reflection for class constants
  (kiesel)
- org.bugzilla.gateway.BugMessage class now inhertits methods from
  peer.mail.MimeMessage class instead of peer.mail.Message class to
  support file attachments
  (toennishoff)
- Added a setBody() method to peer.mail.MimeMessage class to add more 
  compatibility to peer.mail.Message and to support older bedavior of
  org.bugzilla.gateway.BugMessage class
  (toennishoff)


Version 5.7.2, released 2009-03-27
----------------------------------
SVN version: 12947

Heads up!
~~~~~~~~~
- Removed xp-net.xp_framework-{VERSION}.xar from boot classpath. It is
  no longer required for runners, that's all in xp-tools-${VERSION}.xar.
  See http://news.xp-framework.net/article/290/2009/03/27/
  (friebe)

RFCs
~~~~
- Implemented RFC #0087 - Move class details information to ClassLoader
  (friebe)
- Implemented RFC #0174 - io.collections interface additions / io.streams 
  integration
  (friebe)

- Implemented RFC #0167 - RDBMS and Timezones
  (gelli)

Features
~~~~~~~~
- Added lang.Primitive::wrapperClass() method
  (friebe)
- Included type information in unittest.AssertionFailedError's message
  See http://news.xp-framework.net/article/291/2009/03/28/
  (friebe)
- Included prerequisites in unittest.PrerequisitesNotMetError's message
  (friebe)
- Added lang.reflect.Package::getSimpleName() which complements 
  lang.XPClass::getSimpleName()